File Name: CHANGES

09/04/2012 FASP 1.0.7:
- Change some filenames to keep naming consistent.
- Some more OMP changes, make changes to fasp4monix accordingly.
- Several OMP optimization changes.

08/25/2012 FASP 1.0.6:
- Replace "#if FASP_USE_OPENMP" by the system environment variable "_OPENMP".
- Some changes to OMP functions for sparse matrix operations.
- Some changes for fasp4monix/SPE10.
- Fix a typo in README for building FASP.
- Change filename: amg_setup_aggregation.inl -> amg_setup_aggregation_csr.inl.
- Revert test.c and input.ini to their orginal state.
- Fix a strange HG version problem.
- Upgrade Doxygen to 1.8.2.

08/22/2012 FASP 1.0.5:
- Replace "if (FASP_USE_OPENMP)" by preprocessing "#if".

08/02/2012 FASP 1.0.4:
- Update block Jacobi in OMP.
- Fix function name bugs in io.c.

07/12/2012 FASP 1.0.3:
- Update a few OMP routines.
- Prepare testing OMP version on Windows.
- Modify the TODO list.

07/05/2012 FASP 1.0.2:
- Modify the interface of Schwarz to make it consistent with AMG and ILU.
- Update a few OMP routines. 
- Fix a VC++ compability problem in fort_ns.h.
- Fix a data type bug and other possible problems according to VC++ warnings.
- Remove user-defined make.inc files.

06/27/2012 FASP 1.0.1:
- Fix a few GCC warnings and Doxygen warnings.
- Update documentation.
- Update a few OMP routines.

06/26/2012 FASP 1.0.0:
- Bug fixes: the OMP warnings and implicit definied functions.
- Fix Doxygen in the new added functions for OMP.
- Update documentation.

06/23/2012 FASP 0.9.9:
- Fix warnings in the serial version except *.f files.
- Find bugs in the OMP version with implicit function definitions.

06/20/2012 FASP 0.9.8: alpha testing stage
- Fix a bug in OMP conditional preprocessing.
- Fix a bug in fasp_icsr_tran and fasp_dcsr_tran.
- Test the current version with gcc4.4, 4.5, and 4.6 in various of Linux systems.
- OMP version merging is completed.
- Modify default parameters based on performance tests.
- Fix a function name bug. 
