@@ -4,6 +4,7 @@ File Name: CHANGES
 - Change some filenames to keep naming consistent.
 - Some more OMP changes, make changes to fasp4monix accordingly.
 - Several OMP optimization changes.
+- Change default parameters: coarse_scaling is not safe.
 
 08/25/2012 FASP 1.0.6:
 - Replace "#if FASP_USE_OPENMP" by the system environment variable "_OPENMP".
